<resources>
    <string name="app_name" translatable="false">Yumetsuki</string>
    <string name="add_more_user">Add more account</string>
    <string name="apply">Apply</string>
    <string name="assisted">Assisted</string>
    <string name="background_alpha">Background Alpha</string>
    <string name="checkin_now">Check-in now</string>
    <string name="checkin_progress">HoYoLAB Check-in progressing</string>
    <string name="cookie_help_step_one">Login HoYoLAB on PC.\nRight click on the page, click \"Inspect\"</string>
    <string name="cookie_help_step_two">Go to tab \"Console\"\nType \"document.cookie\" there, then press Enter.\nCopy the cookie code and paste it on the app.</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="copy_cookie">Copy cookie</string>
    <string name="current_resin_status">Current resin status</string>
    <string name="daily_commissions">Daily commissions</string>
    <string name="done">Done</string>
    <string name="about_label">About</string>
    <string name="about_title">About app</string>
    <string name="add_more_user_desc">One is not enough, huh…</string>
    <string name="close">Close</string>
    <string name="enemies_of_note">Enemies of Note</string>
    <string name="enter_cookie">Enter cookie</string>
    <string name="err_cookie_exists">Account with this cookie is already exists on yumetsuki, try different ones</string>
    <string name="err_cookie_invalid">Cookie is not valid and cannot be used</string>
    <string name="err_cookie_invalid_short">Invalid cookie code</string>
    <string name="err_hoyointernal">Error occurred in HoYoLAB\'s internal, please try again later.</string>
    <string name="err_noresponse">No response from HoYoLAB (perhaps it\'s server issues), please try again later.</string>
    <string name="err_overrequest">Tried too much today, please try again later.</string>
    <string name="expedition_done">Expedition done</string>
    <string name="expedition">Expeditions</string>
    <string name="fail_connect_hoyolab">Failed to connect to HoYoLAB server, make sure you are connected to the internet.</string>
    <string name="fail_get_ingame_data">Failed to get in-game data from your HoYoLab</string>
    <string name="fail_login">Failed to login into HoYoLAB API with this cookie</string>
    <string name="fetching_in_game_data">Fetching in-game data…</string>
    <string name="fetching_user_info">Fetching HoYoLAB user information …</string>
    <string name="font_size">Font Size</string>
    <string name="game_accounts_synced">In-game account synchronized</string>
    <string name="game_accounts_syncing">Synchronizing in-game accounts…</string>
    <string name="datasync_timeoption_desc">Synchronize in-game data periodically for widget usage and in-game status notifications</string>
    <string name="datasync_timeoption_title">Periodic synchronization time</string>
    <string name="data_sync_title">In-game data sync</string>
    <string name="genshin_impact">Genshin Impact</string>
    <string name="honkai_impact_3rd">Honkai Impact 3rd</string>
    <string name="honkai_star_rail">Honkai Star Rail</string>
    <string name="get_cookie">Get cookie</string>
    <string name="get_hoyolab_cookie">Get HoYoLab cookie</string>
    <string name="grab_cookie_from_pc">Grab cookie from PC</string>
    <string name="hint_cookie">Code</string>
    <string name="home">Home</string>
    <string name="hour_short">%1$dh</string>
    <string name="ingame_events">In-game events</string>
    <string name="initial_permission_msg">Some permissions is required to make sure the app functionality such as:\n- Widget customization preview\n- In-game events notifications \n\nYou can still use the app even if you reject the permissions.</string>
    <string name="initial_permission_title">Allowing permission</string>
    <string name="last_sync">Last sync</string>
    <string name="level_num">Lv.  %d</string>
    <string name="license_title">Open source notices</string>
    <string name="loading">loading…</string>
    <string name="login_success">Successfully login into HoYoLAB API</string>
    <string name="login_welcome_desc">Let\'s sign yours in!</string>
    <string name="login_welcome_title">Hello, Traveler</string>
    <string name="logout">Logout</string>
    <string name="makepublicnote_error">Failed to update Realtime note to public, alternatively you can switch it manually from the HoYoLAB.</string>
    <string name="makepublicnote_error_pluscode">Failed to change the Realtime note to public (%s)</string>
    <string name="makepublicnote_success">Successfully changed the Realtime note to public! Press the save button!</string>
    <string name="minute_short">%1$dm</string>
    <string name="native_hoyolab_account_msg">Due to Android System WebView limitation, you can only log in with native HoYoLAB account method (not login with social media).\n\nSo, if you\'re going to use social media, go to SNS Account Guide and follow the instruction on it.</string>
    <string name="native_hoyolab_title">Check Your Account</string>
    <string name="no_account_linked">No %s account linked yet</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="note_synchronizing">Synchronizing in-game data…</string>
    <string name="notification">Notification</string>
    <string name="on_check_in_failed">Check-in failed</string>
    <string name="on_check_in_success">Check-in success</string>
    <string name="only_single_account">No more in-game account present</string>
    <string name="open_hoyolab">Open HoYoLAB</string>
    <string name="parametric_transformer">Parametric Transformer</string>
    <string name="paste_from_clipboard">Paste from clipboard</string>
    <string name="push_checkin_description">Daily check-in status</string>
    <string name="push_checkin_title">Daily Check-in</string>
    <string name="push_expedition_description">Expedition status</string>
    <string name="push_expedition_title">Expedition</string>
    <string name="push_genshin_checkin_noaccount">No genshin account present, cannot check-in.</string>
    <string name="push_genshin_checkin_done">Traveler, you\'ve already checked in today!</string>
    <string name="push_genshin_checkin_failed">Failed to check-in on HoYoLAB Genshin, will try again in 30 minutes.</string>
    <string name="push_genshin_checkin_success">Today\'s Genshin check-in is completed, Traveler!</string>
    <string name="push_houkai_checkin_noaccount">No Honkai account present, cannot check-in.</string>
    <string name="push_houkai_checkin_done">You\'ve already checked in, Kanchou!</string>
    <string name="push_houkai_checkin_failed">Failed to check-in on Honkai Impact 3, will try again in 30 minutes.</string>
    <string name="push_houkai_checkin_success">Today\'s check-in is completed, Kanchou!</string>
    <string name="push_honkai_checkin_title">Honkai Impact 3 Daily Check-in</string>
    <string name="push_starrail_checkin_noaccount">No Honkai Star Rail account present, cannot check-in.</string>
    <string name="push_starrail_checkin_done">You\'ve already checked in, Trailblazer!</string>
    <string name="push_starrail_checkin_failed">Failed to check-in on Honkai Star Rail, will try again in 30 minutes.</string>
    <string name="push_starrail_checkin_success">Today\'s check-in is completed, Trailblazer!</string>
    <string name="push_msg_expedition_done">Traveler! All the expedition is completed!</string>
    <string name="push_msg_realm_currency_full">Traveler! Realm currency is full!</string>
    <string name="push_msg_resin_full">Traveler, your in-game resin is fully replenished!</string>
    <string name="push_msg_resin_num">Traveler, your in-game resin has now reached %d!</string>
    <string name="push_realm_currency_description">Realm currency status</string>
    <string name="push_realm_currency_title">Realm currency</string>
    <string name="push_resin_description">Resin status</string>
    <string name="push_resin_title">Resin</string>
    <string name="realm_currency">Realm currency</string>
    <string name="realmcurrency_full">Realm currency full</string>
    <string name="realtimenote_error_data_private">Can\'t receive data because Battle Chronicle is private. In HoYoLAB Settings, make your Battle Chronicle public and try again.</string>
    <string name="realtimenote_error_noacc">Can\'t get Realtime note because no in-game account linked with this HoYoLAB account</string>
    <string name="realtimenote_error_private">Realtime note is Private</string>
    <string name="realtimenote_makepublic_ask">Cannot sync due to private realtime notes. Do you want to change it to public?</string>
    <string name="realtimenote_sync_failed">Failed to sync Realtime note</string>
    <string name="realtimenote_sync_failed_pluscode">Failed to sync Realtime note [%s]</string>
    <string name="realtimenote_sync_success">Successfully sync Realtime note</string>
    <string name="refresh">Refresh</string>
    <string name="resin">Resin</string>
    <string name="resin_image">Resin Image</string>
    <string name="select_account">Select account</string>
    <string name="sns_account">SNS Account Guide</string>
    <string name="submit">Submit</string>
    <string name="success_fetching_ingame_info">Successfully fetching in-game information</string>
    <string name="sync_account">Sync account</string>
    <string name="sync">Sync</string>
    <string name="sync_user_info_success">User info has been synchronized</string>
    <string name="tab_note">Realtime Note</string>
    <string name="version_name">Version %s</string>
    <string name="widget_status_to_show">Status to show</string>
    <string name="widget_customize">Customize</string>
    <string name="widget_label_note">In-game Realtime Note</string>
    <string name="widget_sample_coin">2400/2400</string>
    <string name="widget_sample_resin">200/200</string>
    <string name="widget_sample_resin_current">200</string>
    <string name="widget_sample_resin_max">/200</string>
    <string name="widget_sample_tasks">4/4</string>
    <string name="widget_sample_time">0h 0m</string>
    <string name="widget_sample_time_remaining">0h 0m left</string>
    <string name="widget_sample_time_sync">MM/dd hh:mm</string>
    <string name="widget_ui_parameter_done">Done</string>
    <string name="widget_ui_parameter_max">Full</string>
    <string name="widget_ui_remain_days">%d day(s) left</string>
    <string name="widget_ui_remain_time">%1$dh %2$dm left</string>
    <string name="widget_ui_full_time">%1$dh %2$dm</string>
    <string name="widget_ui_transformer_cooldown">Cooldown</string>
    <string name="widget_ui_transformer_not_obtained">Not Obtained</string>
    <string name="widget_ui_transformer_ready">Ready</string>
    <string name="widget_ui_unknown">Unknown</string>
    <string name="widget_show_desc">Show description</string>
    <string name="widget_show_est_full_time">Show estimated full time</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="footer_disclaimer">By continuing, you are aware of Yumetsuki\'s Disclaimer, and acknowledge that the Privacy Policy applies to you</string>
    <string name="sync_check_in_status">Synchronizing check-in status</string>
    <string name="today_check_in_title">Today\'s check-in</string>
    <string name="not_yet">Not yet</string>
    <string name="completed">Completed</string>
    <string name="widget_full_at">Full at</string>
    <string name="trailblaze_power">Trailblaze Power</string>
    <string name="zzz_battery_charge">Battery Charge</string>
    <string name="widget_show_icons">Show icons</string>
    <string name="zzz">Zenless Zone Zero</string>
    <string name="push_zzz_checkin_noaccount">No ZZZ account present, cannot check-in.</string>
</resources>