<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="18dp"
    android:orientation="horizontal"
    tools:ignore="UseCompoundDrawables">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        tools:ignore="ContentDescription"
        tools:src="@drawable/ic_serenitea_pot" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:singleLine="true"
                android:textColor="@color/widget_font_main"
                tools:text="@string/realm_currency" />

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:gravity="end"
                android:singleLine="true"
                android:textColor="@color/widget_font_main"
                tools:text="@string/widget_sample_coin" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/subdesc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:singleLine="true"
                android:textColor="@color/widget_font_sub"
                tools:text="@string/widget_full_at" />

            <TextView
                android:id="@+id/substatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:gravity="end"
                android:singleLine="true"
                android:textColor="@color/widget_font_sub"
                tools:text="@string/widget_sample_time" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
