<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/ThemeOverlay.AppWidget">

    <ImageView
        android:id="@+id/compatCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/llBody"
        android:layout_alignTop="@+id/llBody"
        android:layout_alignEnd="@+id/llBody"
        android:layout_alignBottom="@+id/llBody"
        android:contentDescription="@null"
        android:src="@drawable/rounded_square_compat"
        android:tint="@color/widget_background" />

    <LinearLayout
        android:id="@+id/llBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/iv_resin"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="7dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_resin" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llSync"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="8dp"
                android:paddingStart="20dp"
                android:paddingEnd="0dp">

                <TextView
                    android:id="@+id/tvSyncTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:singleLine="true"
                    android:text="@string/widget_sample_time_sync"
                    android:textColor="@color/widget_font_sub"
                    android:textSize="10sp" />

                <ImageView
                    android:id="@+id/ivRefresh"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_sync_24" />

                <ProgressBar
                    android:id="@+id/pbLoading"
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:indeterminateTint="@color/widget_font_sub"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_resin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:singleLine="true"
                        android:text="@string/widget_sample_resin_current"
                        android:textColor="@color/widget_font_main"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_resin_max"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|bottom"
                        android:singleLine="true"
                        android:text="@string/widget_sample_resin_max"
                        android:textColor="@color/widget_font_main"
                        android:textSize="16sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_remain_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="2dp"
                    android:singleLine="true"
                    android:text="@string/widget_sample_time_remaining"
                    android:textColor="@color/widget_font_main"
                    android:textSize="10sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/llDisable"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/llBody"
        android:layout_alignTop="@+id/llBody"
        android:layout_alignEnd="@+id/llBody"
        android:layout_alignBottom="@+id/llBody"
        android:gravity="center"
        android:visibility="gone">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.7"
            android:background="@drawable/rounded_square_sys" />

        <TextView
            android:id="@+id/tv_disable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/not_logged_in"
            android:textColor="@color/widget_font_main"
            android:textSize="12sp" />

    </RelativeLayout>

</RelativeLayout>
